Amendment to put User endpoint + working on new model components
